tests/fail/semantics/widget_dynamic_missing_method/main.kira
construct Widget {
    @Required let body: Widget
    let node: Node { body.node }
}

construct Node {
}

Widget Text {
    let node: Node {
        TextNode()
    }
}

Widget Spacer {
}

Node TextNode {
}

function show(widget: some Widget) {
    widget.node
}

@Main
function main() {
    show(Text())
    return
}
